sample/modules/aurora_postgresql/security_group.tf
resource "aws_security_group" "aurora_pgsql_sg" {
  name        = "${var.cluster_identifier}-pgsql-sg"
  description = "Aurora PGSQL SG"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = var.eks_security_group_id
  }

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
